# nova

./: .clangd  .gitignore  cmake2.txt  cmake_log.txt
NovaGFX/: CMakeLists.txt  README.md  cmake_out.txt  run.bat
NovaGFX/build_mingw/: CMakeCache.txt  Makefile  cmake_install.cmake  error.txt
NovaGFX/build_mingw/examples/hello_world/: Makefile  cmake_install.cmake
NovaGFX/examples/car_game/: CMakeLists.txt  car.cpp  car.hpp  main.cpp  terrain.cpp  terrain.hpp
NovaGFX/examples/font_test/: CMakeLists.txt  main.cpp
NovaGFX/examples/hello_world/: CMakeLists.txt  main.cpp  player.cpp  player.hpp
NovaGFX/examples/neon_drift/: CMakeLists.txt  car.cpp  car.hpp  drift_scorer.cpp  drift_scorer.hpp  game.cpp  game.hpp  hud.cpp  hud.hpp  main.cpp  neon_renderer.cpp  neon_renderer.hpp  track.cpp  track.hpp
NovaGFX/examples/particle_showcase/: CMakeLists.txt  main.cpp
NovaGFX/examples/physics_demo/: CMakeLists.txt  main.cpp
NovaGFX/examples/ui_demo/: CMakeLists.txt  main.cpp
NovaGFX/include/nova/: core.hpp  nova.hpp
NovaGFX/include/nova/assets/: font.hpp  shader.hpp  texture2d.hpp
NovaGFX/include/nova/input/: gamepad.hpp  input.hpp  keyboard.hpp  mouse.hpp
NovaGFX/include/nova/math/: color.hpp  mat4.hpp  rect2.hpp  transform2d.hpp  vector2.hpp  vector3.hpp  vector4.hpp
NovaGFX/include/nova/platform/: window.hpp
NovaGFX/include/nova/renderer/: framebuffer.hpp  post_process.hpp  renderer2d.hpp  text_renderer.hpp
NovaGFX/include/nova/scene/: camera2d.hpp  decal_system.hpp  node2d.hpp  particle_system.hpp  polygon2d.hpp  rect_shape.hpp  sprite.hpp  tilemap.hpp
NovaGFX/include/nova/ui/: box_container.hpp  button.hpp  canvas_layer.hpp  check_box.hpp  control.hpp  dropdown.hpp  grid_container.hpp  label.hpp  panel.hpp  progress_bar.hpp  scroll_view.hpp  slider.hpp  tab_bar.hpp  text_area.hpp  text_input.hpp
NovaGFX/src/assets/: font.cpp  shader.cpp  texture2d.cpp
NovaGFX/src/input/: input.cpp
NovaGFX/src/platform/: window.cpp
NovaGFX/src/renderer/: default_font.hpp  framebuffer.cpp  post_process.cpp  renderer2d.cpp  text_renderer.cpp
NovaGFX/src/scene/: camera2d.cpp  decal_system.cpp  node2d.cpp  particle_system.cpp  polygon2d.cpp  rect_shape.cpp  sprite.cpp  tilemap.cpp
NovaGFX/src/ui/: button.cpp  control.cpp  label.cpp  text_input.cpp
standalone_example/: build.bat  main.cpp  player.cpp  player.hpp
